--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,5 +1,7 @@
 .titolo{
     font-weight: bold;
-    font-size: 25;
+    font-size: 50;
     color: white;
+    margin-top: 150;
+    text-align: center;
 }
